--- a/css/styles.css
+++ b/css/styles.css
@@ -61,9 +61,18 @@ section {
   display: block;
 }
 
+#maincontent,
+#breadcrumb {
+  max-width: 1200px;
+  margin: auto;
+}
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  border: 2px solid #666;
 }
 
 #footer {
@@ -76,6 +85,85 @@ section {
   text-transform: uppercase;
 }
 
+@media screen and (max-width: 1100px) {
+  #restaurants-list li {
+    width: 250px;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  #restaurant-container {
+    width: 45%;
+  }
+  #reviews-container {
+    width: 55%;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  #restaurants-list li {
+    /* width: 320px; */
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  #restaurant-container,
+  #reviews-container {
+    width: 50%;
+  }
+}
+
+@media screen and (min-width: 650px) and (max-width: 750px) {
+  #restaurants-list li {
+    width: 250px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #restaurant-container,
+  #reviews-container,
+  #breadcrumb {
+    padding: 10px;
+    width: 100%;
+  }
+  .filter-options {
+    flex-direction: column;
+    padding-top: 15px;
+  }
+  #restaurant-container,
+  #reviews-container {
+    width: inherit;
+  }
+  #restaurant-name {
+    margin: 5px 0 10px;
+  }
+  #reviews-container h2 {
+    margin: 0 0 10px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #restaurant-container,
+  #reviews-container,
+  #breadcrumb {
+    padding: 10px;
+  }
+  #restaurants-list li {
+    margin: 15px 0;
+    width: 250px;
+  }
+}
+
+@media screen and (min-width: 420px) {
+  #restaurant-container {
+    padding-right: 20px;
+  }
+  #reviews-container {
+    padding-left: 20px;
+  }
+}
+
 /* ====================== Navigation ====================== */
 
 nav {
@@ -83,27 +171,28 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align: center;
+  display: grid;
+  line-break: 1.5;
 }
 
 nav h1 {
   margin: auto;
+  display: inline-block;
 }
 
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
 
 #breadcrumb {
-  padding: 10px 40px 16px;
+  padding: 15px 40px;
   list-style: none;
   background-color: #eee;
-  font-size: 17px;
-  margin: 0;
-  width: calc(50% - 80px);
+  border-right: 2px solid #444;
+  border-left: 2px solid #444;
 }
 
 /* Display list items side by side */
@@ -128,6 +217,7 @@ nav h1 a {
 #breadcrumb li a:hover {
   color: #01447e;
   text-decoration: underline;
+  border: none;
 }
 
 /* ====================== Map ====================== */
@@ -138,12 +228,17 @@ nav h1 a {
   background-color: #ccc;
 }
 
+#map-container {
+  width: 100%;
+}
+
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
-  width: 100%;
-  height: 50px;
   background-color: #3397db;
   align-items: center;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .filter-options h2 {
@@ -151,14 +246,13 @@ nav h1 a {
   font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 0 10px 0 10px;
 }
 
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial, sans-serif;
-  font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
@@ -171,8 +265,11 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 30px 15px 60px;
+  padding: 20px 15px;
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 #restaurants-list li {
@@ -181,9 +278,12 @@ nav h1 a {
   font-family: Arial, sans-serif;
   margin: 15px;
   min-height: 380px;
-  padding: 0 30px 25px;
+  padding: 0 0 25px;
   text-align: left;
-  width: 270px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
 }
 
 #restaurants-list .restaurant-img {
@@ -191,14 +291,13 @@ nav h1 a {
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
   min-width: 100%;
 }
 
 #restaurants-list li h1 {
   color: #f18200;
   font-family: Arial, sans-serif;
-  font-size: 14pt;
+  font-size: 1.3em;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
@@ -208,17 +307,15 @@ nav h1 a {
 
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
+  line-height: 1.4;
 }
 
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
-  display: inline-block;
-  font-size: 10pt;
-  margin: 15px 0 0;
-  padding: 8px 30px 10px;
+  margin: 0 20px;
+  padding: 15px 30px;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -226,20 +323,11 @@ nav h1 a {
 
 /* ====================== Restaurant Details ====================== */
 
-.inside header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}
-
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  height: 420px;
+  border-bottom: 2px solid #666;
+  width: 100%;
 }
 
 .inside #map {
@@ -248,60 +336,60 @@ nav h1 a {
   width: 100%;
 }
 
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 50%;
-}
-
 #restaurant-name {
   color: #f18200;
   font-family: Arial, sans-serif;
-  font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  margin: 5px 30px;
   text-transform: uppercase;
-  line-height: 1.1;
+  line-height: 1.2;
 }
 
 #restaurant-img {
-  width: 90%;
+  width: 100%;
+  max-width: 100%;
+  border: 2px solid #666;
 }
 
 #restaurant-address {
-  font-size: 12pt;
-  margin: 10px 0px;
+  font-weight: 350;
+  margin: 0px 0px 20px;
+  padding: 2px 0;
+  text-align: center;
+  width: 100%;
 }
 
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-  width: 90%;
+  width: 100%;
 }
 
 #restaurant-container,
 #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 20px 45px;
 }
 
 #reviews-container {
-  padding: 30px 40px 80px;
+  width: 60%;
+  padding-bottom: 0;
+}
+
+#restaurant-container {
+  width: 40%;
 }
 
 #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
@@ -318,10 +406,8 @@ nav h1 a {
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
-  overflow: hidden;
-  padding: 0 20px 20px;
+  padding: 10px 20px 20px;
   position: relative;
-  width: 85%;
 }
 
 #reviews-list li p {
