--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@ li {
   color: #333;
 }
 
+img {
+  width: 100%;
+}
+
 a {
   color: orange;
   text-decoration: none;
@@ -72,7 +76,7 @@ section {
   min-height: 100%;
   display: flex;
   flex-wrap: wrap;
-  border: 2px solid #666;
+  border: 1px solid #666;
 }
 
 #footer {
@@ -188,16 +192,17 @@ nav h1 a {
 }
 
 #breadcrumb {
-  padding: 15px 40px;
+  padding: 15px 0px;
   list-style: none;
   background-color: #eee;
-  border-right: 2px solid #444;
-  border-left: 2px solid #444;
+  border-right: 1px solid #444;
+  border-left: 1px solid #444;
 }
 
 /* Display list items side by side */
 #breadcrumb li {
   display: inline;
+  padding: 10px;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -233,6 +238,11 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Filtering ====================== */
+
+#filter-list {
+  width: 100%;
+}
+
 .filter-options {
   background-color: #3397db;
   align-items: center;
@@ -253,7 +263,7 @@ nav h1 a {
   background-color: white;
   border: 1px solid #fff;
   font-family: Arial, sans-serif;
-  height: 35px;
+  height: 30px;
   letter-spacing: 0;
   margin: 10px;
   padding: 0 10px;
@@ -301,13 +311,13 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 20px 0 10px;
+  margin: 10px 10px 10px 20px;
   text-transform: uppercase;
 }
 
 #restaurants-list p {
-  margin: 0;
-  line-height: 1.4;
+  margin: 5px 10px 20px 20px;
+  line-height: 1.2;
 }
 
 #restaurants-list li a {
@@ -326,7 +336,7 @@ nav h1 a {
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 420px;
-  border-bottom: 2px solid #666;
+  border-bottom: 1px solid #666;
   width: 100%;
 }
 
@@ -349,7 +359,7 @@ nav h1 a {
 #restaurant-img {
   width: 100%;
   max-width: 100%;
-  border: 2px solid #666;
+  border: 1px solid #666;
 }
 
 #restaurant-address {
@@ -402,7 +412,7 @@ nav h1 a {
 
 #reviews-list li {
   background-color: #fff;
-  border: 2px solid #f3f3f3;
+  border: 1px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
