--- a/css/styles.css
+++ b/css/styles.css
@@ -47,8 +47,8 @@ h4,
 h5,
 h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 20px;
-  color: #fff;
+  margin: 10px 20px 10px;
+  color: #d87402
 }
 
 article,
@@ -64,6 +64,16 @@ menu,
 nav,
 section {
   display: block;
+}
+
+.skip-link {
+  position: absolute;
+  top: -100px;
+  left: 0;
+  z-index: 1001;
+}
+.skip-link:focus {
+  top: 0;
 }
 
 #maincontent,
@@ -186,6 +196,7 @@ nav {
 nav h1 {
   margin: auto;
   display: inline-block;
+  color: #fff;
 }
 
 nav h1 a {
@@ -361,7 +372,7 @@ nav h1 a {
   font-family: Arial, sans-serif;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 5px 30px;
+  margin: 10px 20px;
   text-transform: uppercase;
   line-height: 1.2;
 }
